--- a/products.html
+++ b/products.html
@@ -19,14 +19,9 @@ header {
   top: 0;
   z-index: 1000;
 }
-.header-buttons { 
-  margin-top: 10px; 
-  display: flex; 
-  flex-wrap: wrap; 
-  justify-content: center; 
-  gap:5px;
-}
+.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
 .header-buttons button {
+  position: relative;
   background: #ffd814;
   border: 1px solid #fcd200;
   padding: 6px 12px;
@@ -36,11 +31,12 @@ header {
 }
 .header-buttons button:hover { background: #f7ca00; }
 
-/* عداد السلة */
+/* عداد السلة فوق الزر */
 #cart-count {
   position: absolute;
-  top: -8px;
-  right: -8px;
+  top: -12px;
+  left: 50%;
+  transform: translateX(-50%);
   background: red;
   color: #fff;
   font-size: 12px;
@@ -115,13 +111,8 @@ header {
   transition: 0.3s;
 }
 .product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.product img {
-  width: 100%;
-  height: 120px;
-  object-fit: contain;
-  margin-bottom: 8px;
-}
-.name { font-size: 16px; margin: 5px 0; color: #333; }
+.product img { width: 100%; height: 120px; object-fit: contain; margin-bottom: 8px; }
+.name { font-size: 16px; margin: 5px 0; color: #333; word-break: break-word; }
 .price { font-weight: bold; margin-bottom: 5px; }
 .product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
 .product button {
@@ -149,63 +140,33 @@ header {
   text-align: center;
   z-index: 1002;
   width: 90%;
-  max-width: 400px;
+  max-width: 500px;
   max-height: 80%;
   overflow-y: auto;
 }
-#totalModal h2 {
-  font-size: 20px;
-  margin-bottom: 15px;
-  color: #8a2be2;
-}
-#totalModal button {
-  margin: 5px;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
+#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
+#totalModal button { margin: 5px; padding: 8px 15px; border: none; border-radius: 10px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
 #totalModal button:hover { background: #6a1fbf; }
 
-/* قائمة السلة */
-#cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
+/* قائمة السلة كجدول ثابت الأعمدة */
+#cartList {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr auto;
+  gap: 10px;
+  text-align: center;
+  margin-bottom: 10px;
 }
-.cart-item span { margin: 0 5px; }
-.cart-item button { padding: 2px 8px; font-size: 14px; }
+.cart-item { display: contents; }
+.cart-item span { padding: 5px; word-break: break-word; }
+.cart-item button { padding: 4px 8px; font-size: 14px; }
 
 /* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
-  font-size: 16px;
-  color: #8a2be2;
-  font-weight: bold;
-  text-decoration: none;
-}
+#orderNumbers a { display: block; margin: 5px 0; font-size: 16px; color: #8a2be2; font-weight: bold; text-decoration: none; }
 #orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
 
 /* Toast */
-#toast {
-  position: fixed;
-  bottom: 20px; right: 20px;
-  background: #25d366;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  display: none;
-  z-index: 1003;
-}
+#toast { position: fixed; bottom: 20px; right: 20px; background: #25d366; color: #fff; padding: 10px 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.3); display: none; z-index: 1003; }
+
 </style>
 </head>
 <body>
@@ -240,22 +201,14 @@ header {
 
 <div id="toast">تمت الإضافة إلى السلة</div>
 
-<script defer>
+<script>
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
 let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
 // حفظ السلة تلقائياً
-function saveCart() { localStorage.setItem("cart", JSON.stringify(cart)); }
-
-// تحديث عداد السلة
-function updateCartCount(){
-  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
-  const badge = document.getElementById("cart-count");
-  badge.style.display = count>0?"inline-block":"none";
-  badge.innerText = count;
-}
+function saveCart(){ localStorage.setItem("cart", JSON.stringify(cart)); }
 
 // عرض المنتجات
 function renderProducts(data){
@@ -289,6 +242,14 @@ function renderProducts(data){
    } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
 })();
 
+// تحديث عدد السلة
+function updateCartCount(){
+  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const badge = document.getElementById("cart-count");
+  badge.style.display = count>0?"inline-block":"none";
+  badge.innerText = count;
+}
+
 // إضافة للسلة
 function addToCart(index){
   const input = container.querySelector(`input[data-index='${index}']`);
@@ -313,9 +274,10 @@ function showTotal(){
       const div=document.createElement("div");
       div.className="cart-item";
       div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>السعر: ${price} × 
-                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${lineTotal}</strong> جنيه</span>
-                     <button onclick="removeItem(${idx})">حذف</button>`;
+                     <span>الكمية: <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"></span>
+                     <span>السعر: ${price}</span>
+                     <span>الإجمالي: ${lineTotal}</span>
+                     <span><button onclick="removeItem(${idx})">حذف</button></span>`;
       cartList.appendChild(div);
     }
   });
@@ -400,7 +362,7 @@ document.getElementById("searchBox").addEventListener("input", function(){
   renderProducts(filtered);
 });
 
-// عند تحميل الصفحة، عرض محتوى السلة
+// عداد السلة أول ما تحمل الصفحة
 updateCartCount();
 </script>
 </body>
