--- a/products.html
+++ b/products.html
@@ -144,7 +144,7 @@ header {
   text-align: center;
   z-index: 1002;
   width: 90%;
-  max-width: 450px;
+  max-width: 500px;
   max-height: 80%;
   overflow-y: auto;
 }
@@ -169,13 +169,14 @@ header {
 /* قائمة السلة */
 #cartList { text-align: right; margin-bottom: 10px; }
 .cart-item {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
   align-items: center;
+  gap: 5px;
   border-bottom: 1px solid #ccc;
   padding: 5px 0;
 }
-.cart-item span { margin: 0 5px; }
+.cart-item span, .cart-item input { text-align: center; }
 .cart-item button { padding: 2px 8px; font-size: 14px; }
 
 /* الأرقام تحت بعض */
@@ -241,10 +242,8 @@ const container = document.getElementById("products-container");
 let productsData = [];
 let cart = JSON.parse(localStorage.getItem("cart") || "{}");
 
-// حفظ السلة تلقائي
 function saveCart(){ localStorage.setItem("cart", JSON.stringify(cart)); }
 
-// عرض المنتجات
 function renderProducts(data){
   let html = "";
   for(let i=0;i<data.length;i++){
@@ -260,7 +259,6 @@ function renderProducts(data){
   container.innerHTML = html;
 }
 
-// تحميل سريع للمنتجات
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -312,9 +310,12 @@ function showTotal(){
       total += lineTotal;
       const div = document.createElement("div");
       div.className = "cart-item";
-      div.innerHTML = `<span>${product.name}</span>
-                       <span>السعر: ${product.price} × الكمية: <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${lineTotal}</strong> جنيه</span>
-                       <button onclick="removeItem(${idx})">حذف</button>`;
+      div.innerHTML = `
+        <span>${product.name}</span>
+        <span>الكمية: <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"></span>
+        <span>السعر: ${product.price}</span>
+        <span>المجموع: ${lineTotal}</span>
+        <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
   }
@@ -333,7 +334,7 @@ function updateQty(idx,value){
 function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
-// إرسال الطلب عبر واتساب مع السعر
+// إرسال الطلب عبر واتساب مع ترتيب الخانات الجديد
 document.getElementById("sendBtn").onclick = function(){
   const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display="block";
@@ -348,7 +349,7 @@ document.getElementById("sendBtn").onclick = function(){
           const product = productsData[idx];
           const lineTotal = qty * product.price;
           total += lineTotal;
-          text += `• ${product.name}%0A  السعر: ${product.price} × الكمية: ${qty} = ${lineTotal} جنيه%0A%0A`;
+          text += `• ${product.name}%0A  الكمية: ${qty} × السعر: ${product.price} = ${lineTotal} جنيه%0A%0A`;
         }
       }
       text += `💰 المجموع الكلي: ${total} جنيه`;
