--- a/products.html
+++ b/products.html
@@ -19,42 +19,36 @@ header {
   top: 0;
   z-index: 1000;
 }
-.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
+
+.header-buttons {
+   margin-top: 10px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   gap:5px;
+}
 .header-buttons button {
   background: #ffd814;
   border: 1px solid #fcd200;
-  padding: 6px 12px;
+  padding: 8px 16px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
-  position: relative;
+  font-size: 16px;
 }
 .header-buttons button:hover { background: #f7ca00; }
-
-/* عداد السلة فوق الزر */
-#cart-count {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
 
 /* زر الجرس */
 #notifBtn {
   position: relative;
   background: #ff4444;
   border: 1px solid #cc0000;
-  padding: 6px 12px;
+  padding: 8px 16px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
   color: #fff;
+  animation: ring 1.5s infinite;
 }
 #notif-count {
   position: absolute;
@@ -69,6 +63,19 @@ header {
   display: none;
 }
 
+/* حركة الجرس */
+@keyframes ring {
+  0% { transform: rotate(0deg); }
+  1% { transform: rotate(15deg); }
+  3% { transform: rotate(-10deg); }
+  5% { transform: rotate(15deg); }
+  7% { transform: rotate(-10deg); }
+  9% { transform: rotate(15deg); }
+  11% { transform: rotate(-10deg); }
+  13% { transform: rotate(0deg); }
+  100% { transform: rotate(0deg); }
+}
+
 /* بانر المنتج الجديد */
 #newBanner {
   display: none;
@@ -80,115 +87,76 @@ header {
   font-weight: bold;
 }
 
-/* مربع البحث */
-#searchBox {
-  display: block;
-  margin: 15px auto;
-  padding: 10px;
-  width: 90%;
-  max-width: 400px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+/* عداد السلة */
+#cart-count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: red;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
 }
 
-/* المنتجات */
+/* منتجات على شكل كروت */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 12px;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 15px;
   padding: 15px;
 }
 .product {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 10px;
-  text-align: center;
   background: #fff;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   transition: 0.3s;
 }
-.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
-.product img {
-  width: 100%;
-  height: 120px;
-  object-fit: contain;
-  margin-bottom: 8px;
-}
-.name { font-size: 16px; margin: 5px 0; color: #333; word-break: break-word; }
-.price { font-weight: bold; margin-bottom: 5px; }
+.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+.product img { width: 100%; height: 150px; object-fit: contain; background: #f9f9f9; }
+.product-info { padding: 10px; text-align: center; }
+.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
+.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
 .product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
-.product button {
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
+.product button { padding: 8px 10px; border: none; border-radius: 5px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
 .product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
-/* نافذة اجمالي الفاتورة */
+/* نافذة إجمالي الفاتورة */
 #totalModal {
   display: none;
   position: fixed;
   top: 50%; left: 50%;
   transform: translate(-50%,-50%);
   background: #fff;
-  padding: 20px;
+  padding: 20px 25px;
   border-radius: 15px;
-  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
   text-align: center;
   z-index: 1002;
   width: 90%;
-  max-width: 500px;
-  max-height: 80%;
+  max-width: 650px;
+  max-height: 85%;
   overflow-y: auto;
-}
-#totalModal h2 {
-  font-size: 20px;
-  margin-bottom: 15px;
-  color: #8a2be2;
-}
-#totalModal button {
-  margin: 5px;
-  padding: 8px 15px;
-  border: none;
-  border-radius: 10px;
-  background: #8a2be2;
-  color: #fff;
-  cursor: pointer;
-  font-weight: bold;
-  transition: 0.3s;
-}
-#totalModal button:hover { background: #6a1fbf; }
-
-/* قائمة السلة */
-#cartList { text-align: right; margin-bottom: 10px; }
-.cart-item {
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
-  align-items: center;
-  gap: 5px;
-  border-bottom: 1px solid #ccc;
-  padding: 5px 0;
-}
-.cart-item span, .cart-item input { text-align: center; }
-.cart-item button { padding: 2px 8px; font-size: 14px; }
-
-/* الأرقام تحت بعض */
-#orderNumbers a {
-  display: block;
-  margin: 5px 0;
   font-size: 16px;
-  color: #8a2be2;
-  font-weight: bold;
-  text-decoration: none;
 }
-#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
+
+/* جدول الفاتورة */
+#cartList-header { display: grid; grid-template-columns: 2fr 1fr 1fr 1fr auto; font-weight: bold; margin-bottom: 5px; text-align: center; }
+#cartList { text-align: right; margin: 10px 0; display: grid; grid-template-columns: 2fr 1fr 1fr 1fr auto; gap: 10px; align-items: center; background: #f5f5f5; padding: 10px; border-radius: 10px; }
+.cart-item { display: contents; }
+.cart-item span { padding: 5px 8px; word-break: break-word; }
+.cart-item .remove-btn { background: #ff4444; color: white; border: none; border-radius: 5px; padding: 5px 10px; cursor: pointer; margin-top: 5px; }
+.cart-item .remove-btn:hover { background: #cc0000; }
+
+/* أزرار الفاتورة */
+#totalModal button { margin: 10px 5px 0 5px; padding: 10px 18px; border: none; border-radius: 10px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; font-size: 16px; transition: 0.3s; }
+#totalModal button:hover { background: #6a1fbf; }
 
 /* Toast */
 #toast {
@@ -202,6 +170,17 @@ header {
   display: none;
   z-index: 1003;
 }
+
+/* تحسين الموبايل */
+@media (max-width: 600px){
+  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
+  .product img { height: 120px; }
+  #totalModal { width: 95%; padding: 15px; max-height: 90%; font-size: 14px; }
+  #cartList, #cartList-header { grid-template-columns: 2fr 1fr 1fr 1fr auto; font-size: 14px; }
+  .cart-item span { padding: 3px 5px; }
+  .cart-item .remove-btn { padding: 4px 8px; font-size: 14px; }
+  #totalModal button { font-size: 14px; padding: 8px 12px; }
+}
 </style>
 </head>
 <body>
@@ -213,9 +192,14 @@ header {
     <button id="totalBtn">💰 إجمالي الفاتورة</button>
     <button id="supportBtn">☎️ الدعم الفني</button>
     <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
-    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
+    <button id="notifBtn">🔔 صل على الحبيب <span id="notif-count">0</span></button>
   </div>
-  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+
+  <!-- مربع البحث + زر العروض -->
+  <div style="display:flex; justify-content:center; gap:10px; margin:15px 0;">
+    <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج..." style="flex:1;">
+    <button id="offerBtn" type="button" style="padding:10px 20px; background:#ff6600; color:#fff; border:none; border-radius:6px; font-weight:bold; cursor:pointer;">💥 عروض</button>
+  </div>
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
@@ -223,7 +207,17 @@ header {
 
 <div id="totalModal">
   <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+
+  <div id="cartList-header">
+    <span>المنتج</span>
+    <span>الكمية</span>
+    <span>السعر</span>
+    <span>الإجمالي</span>
+    <span>حذف</span>
+  </div>
+
   <div id="cartList"></div>
+
   <button id="sendBtn">📤 إرسال عبر واتساب</button>
   <button onclick="closeTotalModal()">❌ إغلاق</button>
   <div id="orderNumbers" style="margin-top:10px; display:none;">
@@ -240,25 +234,27 @@ header {
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
-let cart = JSON.parse(localStorage.getItem("cart") || "{}");
+let cart = [];
 
-function saveCart(){ localStorage.setItem("cart", JSON.stringify(cart)); }
-
+// عرض المنتجات
 function renderProducts(data){
   let html = "";
   for(let i=0;i<data.length;i++){
       const item = data[i];
       html += `<div class="product">
                   <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="name">${item.name}</div>
-                  <div class="price">السعر: ${item.price} جنيه</div>
-                  <input type="number" min="1" value="1" data-index="${i}">
-                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
+                  <div class="product-info">
+                    <div class="name">${item.name}</div>
+                    <div class="price">${item.price} جنيه</div>
+                    <input type="number" min="1" value="1" data-index="${i}">
+                    <button onclick="addToCart(${i})">أضف إلى السلة</button>
+                  </div>
                </div>`;
   }
   container.innerHTML = html;
 }
 
+// تحميل سريع للمنتجات
 (async function(){
    if(localStorage.getItem("products")){
       productsData = JSON.parse(localStorage.getItem("products"));
@@ -282,11 +278,10 @@ function showToast(msg){
 }
 
 function updateCartCount(){
-  const count = Object.values(cart).reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
   const badge = document.getElementById("cart-count");
   badge.style.display = count>0?"inline-block":"none";
   badge.innerText = count;
-  saveCart();
 }
 
 function addToCart(index){
@@ -302,68 +297,65 @@ function showTotal(){
   let total=0;
   const cartList=document.getElementById("cartList");
   cartList.innerHTML="";
-  for(let idx in cart){
-    const qty = cart[idx];
+  cart.forEach((qty,idx)=>{
     if(qty){
-      const product = productsData[idx];
-      const lineTotal = qty * product.price;
-      total += lineTotal;
-      const div = document.createElement("div");
-      div.className = "cart-item";
-      div.innerHTML = `
-        <span>${product.name}</span>
-        <span>الكمية: <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"></span>
-        <span>السعر: ${product.price}</span>
-        <span>المجموع: ${lineTotal}</span>
-        <button onclick="removeItem(${idx})">حذف</button>`;
+      const price = productsData[idx].price;
+      const lineTotal = qty*price;
+      total+=lineTotal;
+      const div=document.createElement("div");
+      div.className="cart-item";
+      div.innerHTML=`<span>${productsData[idx].name}</span>
+                     <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
+                     <span>السعر: ${price}</span>
+                     <span>الإجمالي: ${lineTotal}</span>
+                     <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
       cartList.appendChild(div);
     }
-  }
-  document.getElementById("totalAmount").innerText = total;
+  });
+  document.getElementById("totalAmount").innerText=total;
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ 
-  value=parseInt(value); 
-  if(value<=0) delete cart[idx]; 
-  else cart[idx]=value; 
-  updateCartCount(); 
-  showTotal(); 
+function updateQty(idx,value){
+  value=parseInt(value);
+  if(value<=0) delete cart[idx];
+  else cart[idx]=value;
+  updateCartCount();
+  showTotal();
 }
-
-function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
+function removeItem(idx){
+  delete cart[idx];
+  updateCartCount();
+  showTotal();
+}
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
-// إرسال الطلب عبر واتساب مع ترتيب الخانات الجديد
 document.getElementById("sendBtn").onclick = function(){
   const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display="block";
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 *طلبية جديدة*%0A%0A";
+      let text="🧾 طلبية جديدة\n\n";
       let total=0;
-      for(let idx in cart){
-        const qty = cart[idx];
+      cart.forEach((qty,idx)=>{
         if(qty){
-          const product = productsData[idx];
-          const lineTotal = qty * product.price;
-          total += lineTotal;
-          text += `• ${product.name}%0A  الكمية: ${qty} × السعر: ${product.price} = ${lineTotal} جنيه%0A%0A`;
+          const price=productsData[idx].price;
+          const lineTotal=qty*price;
+          total+=lineTotal;
+          text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
         }
-      }
-      text += `💰 المجموع الكلي: ${total} جنيه`;
-      window.open(`${a.href}?text=${text}`,"_blank");
+      });
+      text+=`المجموع الكلي: ${total} جنيه`;
+      window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
     }
   });
 }
 
-// أزرار الهيدر
 document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
-// إشعارات المنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
@@ -378,13 +370,19 @@ function checkNewProducts(){
   }
 }
 
-// البحث
+// البحث العادي
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
   renderProducts(filtered);
 });
-updateCartCount();
+
+// زر العروض - يظهر فقط المنتجات اللي فيها عمود offer
+document.getElementById("offerBtn").onclick = function(e){
+    e.preventDefault(); // يمنع ريفرش الصفحة
+    const offers = productsData.filter(p => p.offer && p.offer.trim() !== "");
+    renderProducts(offers);
+}
 </script>
 </body>
 </html>
