--- a/products.html
+++ b/products.html
@@ -101,31 +101,64 @@ header {
   display: none;
 }
 
-/* منتجات على شكل كروت */
+/* منتجات على شكل كروت محسنة */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 15px;
-  padding: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 12px;
+  padding: 10px;
 }
 .product {
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   transition: 0.3s;
 }
 .product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-.product img { width: 100%; height: 150px; object-fit: contain; background: #f9f9f9; }
-.product-info { padding: 10px; text-align: center; }
-.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
-.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
-.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
-.product button { padding: 8px 10px; border: none; border-radius: 5px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; transition: 0.3s; }
-.product button:hover { background: #6a1fbf; transform: scale(1.05); }
+.product img {
+  width: 100%;
+  height: auto;
+  max-height: 180px;
+  object-fit: contain;
+  background: #f9f9f9;
+}
+.product-info {
+  padding: 8px;
+  text-align: center;
+}
+.product-info .name {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  line-height: 1.2em;
+}
+.product-info .price {
+  font-size: 14px;
+  color: #8a2be2;
+  margin-bottom: 6px;
+}
+.product input {
+  width: 60%;
+  margin: 5px auto;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+.product button {
+  padding: 8px 12px;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  font-weight: bold;
+  width: 80%;
+  margin: 5px auto;
+  display: block;
+  transition: 0.3s;
+}
+.product button:hover { transform: scale(1.05); }
 
 /* نافذة إجمالي الفاتورة */
 #totalModal {
@@ -172,13 +205,18 @@ header {
 }
 
 /* تحسين الموبايل */
-@media (max-width: 600px){
-  #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
-  .product img { height: 120px; }
-  #totalModal { width: 95%; padding: 15px; max-height: 90%; font-size: 14px; }
-  #cartList, #cartList-header { grid-template-columns: 2fr 1fr 1fr 1fr auto; font-size: 14px; }
-  .cart-item span { padding: 3px 5px; }
-  .cart-item .remove-btn { padding: 4px 8px; font-size: 14px; }
+@media(max-width: 600px){
+  header { font-size: 18px; padding: 12px; }
+  .header-buttons button { font-size: 14px; padding: 6px 10px; }
+  #products-container { grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 10px; padding: 8px; }
+  .product img { max-height: 140px; }
+  .product-info .name { font-size: 14px; }
+  .product-info .price { font-size: 13px; }
+  .product input { width: 70%; }
+  .product button { width: 90%; padding: 6px 8px; font-size: 14px; }
+  #totalModal { width: 95%; padding: 12px; font-size: 14px; max-height: 90%; }
+  #cartList, #cartList-header { grid-template-columns: 2fr 1fr 1fr 1fr auto; font-size: 13px; }
+  .cart-item .remove-btn { padding: 4px 6px; font-size: 13px; }
   #totalModal button { font-size: 14px; padding: 8px 12px; }
 }
 </style>
@@ -196,8 +234,8 @@ header {
   </div>
 
   <!-- مربع البحث + زر العروض -->
-  <div style="display:flex; justify-content:center; gap:10px; margin:15px 0;">
-    <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج..." style="flex:1;">
+  <div style="display:flex; justify-content:center; gap:10px; margin:15px 0; flex-wrap:wrap;">
+    <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج..." style="flex:1; min-width:150px; padding:6px; border-radius:6px; border:1px solid #ccc;">
     <button id="offerBtn" type="button" style="padding:10px 20px; background:#ff6600; color:#fff; border:none; border-radius:6px; font-weight:bold; cursor:pointer;">💥 عروض</button>
   </div>
 </header>
@@ -379,7 +417,7 @@ document.getElementById("searchBox").addEventListener("input", function(){
 
 // زر العروض - يظهر فقط المنتجات اللي فيها عمود offer
 document.getElementById("offerBtn").onclick = function(e){
-    e.preventDefault(); // يمنع ريفرش الصفحة
+    e.preventDefault();
     const offers = productsData.filter(p => p.offer && p.offer.trim() !== "");
     renderProducts(offers);
 }
