--- a/products.html
+++ b/products.html
@@ -5,15 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
+:root {
+  --primary-color: #8a2be2;
+  --secondary-color: #ffd814;
+  --accent-color: #ff4444;
+  --text-color: #333;
+  --light-bg: #f9f9f9;
+  --card-bg: #fff;
+}
+
+body { 
+  font-family: Tahoma, sans-serif; 
+  margin: 0; 
+  background: var(--light-bg);
+  font-size: 14px;
+}
 
 /* الهيدر */
 header {
   background: #131921;
   color: white;
-  padding: 15px;
+  padding: 10px 5px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   position: sticky;
   top: 0;
@@ -21,29 +35,30 @@ header {
 }
 
 .header-buttons {
-   margin-top: 10px;
+   margin-top: 8px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
-   gap:5px;
+   gap: 5px;
 }
 .header-buttons button {
-  background: #ffd814;
+  background: var(--secondary-color);
   border: 1px solid #fcd200;
-  padding: 8px 16px;
+  padding: 6px 12px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
+  white-space: nowrap;
 }
 .header-buttons button:hover { background: #f7ca00; }
 
 /* زر الجرس */
 #notifBtn {
   position: relative;
-  background: #ff4444;
+  background: var(--accent-color);
   border: 1px solid #cc0000;
-  padding: 8px 16px;
+  padding: 6px 12px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
@@ -56,9 +71,9 @@ header {
   right: -8px;
   background: yellow;
   color: black;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: bold;
-  padding: 2px 6px;
+  padding: 2px 5px;
   border-radius: 50%;
   display: none;
 }
@@ -82,142 +97,329 @@ header {
   background: red;
   color: white;
   text-align: center;
-  padding: 10px;
-  font-size: 20px;
+  padding: 8px;
+  font-size: 16px;
   font-weight: bold;
 }
 
 /* عداد السلة */
 #cart-count {
   position: absolute;
-  top: -10px;
-  right: -10px;
+  top: -8px;
+  right: -8px;
   background: red;
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
-  padding: 2px 6px;
+  padding: 2px 5px;
   border-radius: 50%;
   display: none;
 }
 
-/* منتجات على شكل كروت محسنة */
+/* منتجات على شكل كروت */
 #products-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 12px;
-  padding: 10px;
+  padding: 12px;
 }
 .product {
-  background: #fff;
-  border-radius: 10px;
+  background: var(--card-bg);
+  border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   transition: 0.3s;
 }
-.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
-.product img {
-  width: 100%;
-  height: auto;
-  max-height: 180px;
-  object-fit: contain;
-  background: #f9f9f9;
+.product:hover { box-shadow: 0 3px 10px rgba(0,0,0,0.2); }
+.product img { 
+  width: 100%; 
+  height: 130px; 
+  object-fit: contain; 
+  background: #f9f9f9; 
+  padding: 5px;
 }
-.product-info {
-  padding: 8px;
-  text-align: center;
-}
-.product-info .name {
-  font-size: 16px;
+.product-info { padding: 8px; text-align: center; }
+.product-info .name { 
+  font-size: 14px; 
+  margin-bottom: 4px; 
+  color: var(--text-color); 
   font-weight: bold;
-  margin-bottom: 5px;
-  line-height: 1.2em;
+  height: 40px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
-.product-info .price {
+.product-info .price { 
+  font-size: 14px; 
+  color: var(--primary-color); 
+  margin-bottom: 6px; 
+  font-weight: bold;
+}
+.product input { 
+  width: 40px; 
+  margin: 4px auto; 
+  border-radius: 4px; 
+  border: 1px solid #ccc; 
+  text-align: center;
   font-size: 14px;
-  color: #8a2be2;
-  margin-bottom: 6px;
+  padding: 4px;
 }
-.product input {
-  width: 60%;
-  margin: 5px auto;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  text-align: center;
+.product button { 
+  padding: 6px 8px; 
+  border: none; 
+  border-radius: 4px; 
+  background: var(--primary-color); 
+  color: #fff; 
+  cursor: pointer; 
+  font-weight: bold; 
+  font-size: 14px;
+  transition: 0.3s; 
+  margin-top: 5px;
 }
-.product button {
-  padding: 8px 12px;
-  border-radius: 5px;
-  background: #8a2be2;
-  color: #fff;
-  font-weight: bold;
-  width: 80%;
-  margin: 5px auto;
-  display: block;
-  transition: 0.3s;
-}
-.product button:hover { transform: scale(1.05); }
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
 
 /* نافذة إجمالي الفاتورة */
 #totalModal {
   display: none;
   position: fixed;
-  top: 50%; left: 50%;
-  transform: translate(-50%,-50%);
-  background: #fff;
-  padding: 20px 25px;
-  border-radius: 15px;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
-  text-align: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.7);
   z-index: 1002;
-  width: 90%;
-  max-width: 650px;
-  max-height: 85%;
   overflow-y: auto;
-  font-size: 16px;
+  padding: 15px;
+}
+
+.modal-content {
+  background: #fff;
+  margin: 20px auto;
+  padding: 15px;
+  border-radius: 10px;
+  max-width: 95%;
+  width: 500px;
+  position: relative;
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: #ff4444;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 /* جدول الفاتورة */
-#cartList-header { display: grid; grid-template-columns: 2fr 1fr 1fr 1fr auto; font-weight: bold; margin-bottom: 5px; text-align: center; }
-#cartList { text-align: right; margin: 10px 0; display: grid; grid-template-columns: 2fr 1fr 1fr 1fr auto; gap: 10px; align-items: center; background: #f5f5f5; padding: 10px; border-radius: 10px; }
+#cartList-header { 
+  display: grid; 
+  grid-template-columns: 2fr 1fr 1fr 1fr auto; 
+  font-weight: bold; 
+  margin-bottom: 5px; 
+  text-align: center; 
+  font-size: 14px;
+  gap: 5px;
+}
+#cartList { 
+  text-align: right; 
+  margin: 10px 0; 
+  display: grid; 
+  grid-template-columns: 2fr 1fr 1fr 1fr auto; 
+  gap: 8px; 
+  align-items: center; 
+  background: #f5f5f5; 
+  padding: 8px; 
+  border-radius: 8px;
+  font-size: 14px;
+}
 .cart-item { display: contents; }
-.cart-item span { padding: 5px 8px; word-break: break-word; }
-.cart-item .remove-btn { background: #ff4444; color: white; border: none; border-radius: 5px; padding: 5px 10px; cursor: pointer; margin-top: 5px; }
+.cart-item span { padding: 4px 5px; word-break: break-word; }
+.cart-item .remove-btn { 
+  background: #ff4444; 
+  color: white; 
+  border: none; 
+  border-radius: 4px; 
+  padding: 4px 8px; 
+  cursor: pointer; 
+  font-size: 12px;
+}
 .cart-item .remove-btn:hover { background: #cc0000; }
 
 /* أزرار الفاتورة */
-#totalModal button { margin: 10px 5px 0 5px; padding: 10px 18px; border: none; border-radius: 10px; background: #8a2be2; color: #fff; cursor: pointer; font-weight: bold; font-size: 16px; transition: 0.3s; }
-#totalModal button:hover { background: #6a1fbf; }
+.modal-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 15px;
+}
+
+.modal-buttons button { 
+  padding: 8px 12px; 
+  border: none; 
+  border-radius: 6px; 
+  background: var(--primary-color); 
+  color: #fff; 
+  cursor: pointer; 
+  font-weight: bold; 
+  font-size: 14px; 
+  transition: 0.3s; 
+  flex: 1;
+  min-width: 120px;
+}
+.modal-buttons button:hover { background: #6a1fbf; }
 
 /* Toast */
 #toast {
   position: fixed;
-  bottom: 20px; right: 20px;
+  bottom: 20px; 
+  right: 20px;
+  left: 20px;
   background: #25d366;
   color: #fff;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
   display: none;
   z-index: 1003;
+  text-align: center;
+  font-size: 14px;
+}
+
+/* البحث والعروض */
+.search-container {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin: 10px 0;
+  padding: 0 5px;
+}
+
+#searchBox {
+  flex: 1;
+  max-width: 300px;
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+}
+
+#offerBtn {
+  padding: 8px 12px;
+  background: #ff6600;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+/* أرقام الطلبات */
+.order-numbers {
+  margin-top: 15px;
+  display: none;
+  text-align: center;
+}
+
+.order-numbers a {
+  display: block;
+  margin: 8px 0;
+  padding: 8px;
+  background: var(--primary-color);
+  color: white;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.order-numbers a:hover {
+  background: #6a1fbf;
 }
 
 /* تحسين الموبايل */
-@media(max-width: 600px){
-  header { font-size: 18px; padding: 12px; }
-  .header-buttons button { font-size: 14px; padding: 6px 10px; }
-  #products-container { grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 10px; padding: 8px; }
-  .product img { max-height: 140px; }
-  .product-info .name { font-size: 14px; }
+@media (max-width: 480px){
+  body { font-size: 13px; }
+  
+  header { 
+    padding: 8px 3px; 
+    font-size: 16px;
+  }
+  
+  .header-buttons {
+    gap: 3px;
+  }
+  
+  .header-buttons button {
+    padding: 5px 8px;
+    font-size: 12px;
+  }
+  
+  #products-container { 
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); 
+    gap: 8px;
+    padding: 8px;
+  }
+  
+  .product img { height: 110px; }
+  
+  .product-info .name { 
+    font-size: 13px; 
+    height: 36px;
+  }
+  
   .product-info .price { font-size: 13px; }
-  .product input { width: 70%; }
-  .product button { width: 90%; padding: 6px 8px; font-size: 14px; }
-  #totalModal { width: 95%; padding: 12px; font-size: 14px; max-height: 90%; }
-  #cartList, #cartList-header { grid-template-columns: 2fr 1fr 1fr 1fr auto; font-size: 13px; }
-  .cart-item .remove-btn { padding: 4px 6px; font-size: 13px; }
-  #totalModal button { font-size: 14px; padding: 8px 12px; }
+  
+  .product button { font-size: 12px; }
+  
+  .modal-content {
+    padding: 12px;
+    margin: 10px auto;
+  }
+  
+  #cartList-header, #cartList {
+    grid-template-columns: 2fr 1fr 1fr;
+    font-size: 12px;
+  }
+  
+  .cart-item-hide-on-mobile {
+    display: none;
+  }
+  
+  .modal-buttons button {
+    font-size: 13px;
+    padding: 7px 10px;
+    min-width: 100px;
+  }
+  
+  #searchBox, #offerBtn {
+    font-size: 13px;
+    padding: 7px 10px;
+  }
+}
+
+@media (max-width: 350px){
+  #products-container { 
+    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); 
+  }
+  
+  .product img { height: 90px; }
+  
+  .header-buttons button {
+    font-size: 11px;
+    padding: 4px 6px;
+  }
 }
 </style>
 </head>
@@ -227,16 +429,15 @@ header {
   📦 جميع منتجات جنة
   <div class="header-buttons">
     <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-    <button id="totalBtn">💰 إجمالي الفاتورة</button>
-    <button id="supportBtn">☎️ الدعم الفني</button>
-    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
-    <button id="notifBtn">🔔 صل على الحبيب <span id="notif-count">0</span></button>
+    <button id="totalBtn">💰 الإجمالي</button>
+    <button id="supportBtn">☎️ الدعم</button>
+    <button onclick="window.location.href='index.html'">🔙 الرئيسية</button>
+    <button id="notifBtn">🔔 الصلاة <span id="notif-count">0</span></button>
   </div>
 
-  <!-- مربع البحث + زر العروض -->
-  <div style="display:flex; justify-content:center; gap:10px; margin:15px 0; flex-wrap:wrap;">
-    <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج..." style="flex:1; min-width:150px; padding:6px; border-radius:6px; border:1px solid #ccc;">
-    <button id="offerBtn" type="button" style="padding:10px 20px; background:#ff6600; color:#fff; border:none; border-radius:6px; font-weight:bold; cursor:pointer;">💥 عروض</button>
+  <div class="search-container">
+    <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+    <button id="offerBtn">💥 عروض</button>
   </div>
 </header>
 
@@ -244,25 +445,31 @@ header {
 <div id="products-container"></div>
 
 <div id="totalModal">
-  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+  <div class="modal-content">
+    <button class="modal-close" onclick="closeTotalModal()">×</button>
+    <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
 
-  <div id="cartList-header">
-    <span>المنتج</span>
-    <span>الكمية</span>
-    <span>السعر</span>
-    <span>الإجمالي</span>
-    <span>حذف</span>
-  </div>
+    <div id="cartList-header">
+      <span>المنتج</span>
+      <span>الكمية</span>
+      <span class="cart-item-hide-on-mobile">السعر</span>
+      <span>الإجمالي</span>
+      <span>حذف</span>
+    </div>
 
-  <div id="cartList"></div>
+    <div id="cartList"></div>
 
-  <button id="sendBtn">📤 إرسال عبر واتساب</button>
-  <button onclick="closeTotalModal()">❌ إغلاق</button>
-  <div id="orderNumbers" style="margin-top:10px; display:none;">
-    <p>اختر رقم لإرسال الطلب 👇</p>
-    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
-    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
-    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+    <div class="modal-buttons">
+      <button id="sendBtn">📤 إرسال بالواتساب</button>
+      <button onclick="closeTotalModal()">❌ إغلاق</button>
+    </div>
+    
+    <div id="orderNumbers" class="order-numbers">
+      <p>اختر رقم لإرسال الطلب 👇</p>
+      <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+      <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+      <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+    </div>
   </div>
 </div>
 
@@ -343,9 +550,9 @@ function showTotal(){
       const div=document.createElement("div");
       div.className="cart-item";
       div.innerHTML=`<span>${productsData[idx].name}</span>
-                     <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
-                     <span>السعر: ${price}</span>
-                     <span>الإجمالي: ${lineTotal}</span>
+                     <span>${qty}</span>
+                     <span class="cart-item-hide-on-mobile">${price}</span>
+                     <span>${lineTotal}</span>
                      <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
       cartList.appendChild(div);
     }
