--- a/products.html
+++ b/products.html
@@ -40,6 +40,7 @@ header {
    flex-wrap: wrap;
    justify-content: center;
    gap: 5px;
+   position: relative;
 }
 .header-buttons button {
   background: var(--secondary-color);
@@ -50,6 +51,7 @@ header {
   font-weight: bold;
   font-size: 14px;
   white-space: nowrap;
+  position: relative;
 }
 .header-buttons button:hover { background: #f7ca00; }
 
@@ -78,6 +80,22 @@ header {
   display: none;
 }
 
+/* عداد السلة - تم تعديل موقعه */
+#cart-count {
+  position: absolute;
+  top: -8px;
+  right: 50%;
+  transform: translateX(50%);
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 5px;
+  border-radius: 50%;
+  display: none;
+  z-index: 1001;
+}
+
 /* حركة الجرس */
 @keyframes ring {
   0% { transform: rotate(0deg); }
@@ -100,20 +118,6 @@ header {
   padding: 8px;
   font-size: 16px;
   font-weight: bold;
-}
-
-/* عداد السلة */
-#cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 5px;
-  border-radius: 50%;
-  display: none;
 }
 
 /* منتجات على شكل كروت */
@@ -447,7 +451,7 @@ header {
 <div id="totalModal">
   <div class="modal-content">
     <button class="modal-close" onclick="closeTotalModal()">×</button>
-    <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+    <h2>إجمالي الفاتورة: <span id="totalAmount">0.00</span> جنيه</h2>
 
     <div id="cartList-header">
       <span>المنتج</span>
@@ -481,16 +485,24 @@ const container = document.getElementById("products-container");
 let productsData = [];
 let cart = [];
 
+// دالة لتنسيق الأسعار بشكل عشري
+function formatPrice(price) {
+  // تحويل السعر إلى رقم مع التأكد من أنه يحتوي على منزلتين عشريتين
+  return parseFloat(price).toFixed(2);
+}
+
 // عرض المنتجات
 function renderProducts(data){
   let html = "";
   for(let i=0;i<data.length;i++){
       const item = data[i];
+      // استخدام السعر المنسق
+      const formattedPrice = formatPrice(item.price);
       html += `<div class="product">
                   <img src="${item.image || 'https://via.placeholder.com/150'}">
                   <div class="product-info">
                     <div class="name">${item.name}</div>
-                    <div class="price">${item.price} جنيه</div>
+                    <div class="price">${formattedPrice} جنيه</div>
                     <input type="number" min="1" value="1" data-index="${i}">
                     <button onclick="addToCart(${i})">أضف إلى السلة</button>
                   </div>
@@ -544,20 +556,20 @@ function showTotal(){
   cartList.innerHTML="";
   cart.forEach((qty,idx)=>{
     if(qty){
-      const price = productsData[idx].price;
+      const price = parseFloat(productsData[idx].price);
       const lineTotal = qty*price;
       total+=lineTotal;
       const div=document.createElement("div");
       div.className="cart-item";
       div.innerHTML=`<span>${productsData[idx].name}</span>
                      <span>${qty}</span>
-                     <span class="cart-item-hide-on-mobile">${price}</span>
-                     <span>${lineTotal}</span>
+                     <span class="cart-item-hide-on-mobile">${formatPrice(price)}</span>
+                     <span>${formatPrice(lineTotal)}</span>
                      <span><button class="remove-btn" onclick="removeItem(${idx})">حذف</button></span>`;
       cartList.appendChild(div);
     }
   });
-  document.getElementById("totalAmount").innerText=total;
+  document.getElementById("totalAmount").innerText=formatPrice(total);
   document.getElementById("totalModal").style.display="block";
 }
 
@@ -585,13 +597,13 @@ document.getElementById("sendBtn").onclick = function(){
       let total=0;
       cart.forEach((qty,idx)=>{
         if(qty){
-          const price=productsData[idx].price;
+          const price=parseFloat(productsData[idx].price);
           const lineTotal=qty*price;
           total+=lineTotal;
-          text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
+          text+=`${productsData[idx].name} | ${qty} | ${formatPrice(price)} | ${formatPrice(lineTotal)}\n`;
         }
       });
-      text+=`المجموع الكلي: ${total} جنيه`;
+      text+=`المجموع الكلي: ${formatPrice(total)} جنيه`;
       window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
     }
   });
