--- a/products.html
+++ b/products.html
@@ -1,4 +1,4 @@
-الكود مش جايب اي بضاعه بص عدب علي الكود ده <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
@@ -942,3 +942,4 @@ document.getElementById('passwordInput').addEventListener('keypress', function(e
 </script>
 </body>
 </html>
+
